--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,14 @@
     "vue-router": "^2.7.0",
     "vuetify": "^0.16.6",
     "vuex": "^3.0.0",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "eslint": "^4.8.0",
+    "express": "^4.16.1",
+    "mongoose": "^4.10.0",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.12.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
