--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "eslint": "^4.8.0",
-    "express": "^4.16.1",
-    "mongoose": "^4.10.0",
-    "morgan": "^1.9.0",
-    "nodemon": "^1.12.1"
+    "express": "^4.16.1"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
